--- a/app/partials/Messages/contactus.html
+++ b/app/partials/Messages/contactus.html
@@ -1,1 +1,50 @@
-<div class="panel-body"></div>
+<div class="<span><span style="font-size: 16px;"><strong><span style=" font-size: 16px; color: #F8E03F">QUICK REFERENCE USER GUIDE</span></strong></span></span><br />
+<br />
+<span > Click </span>
+<strong><a href="http://img.proformaecom.com/images/UMG/PlacingOrdersontheUMGStationeryOnlineStore_rev7-11-14.pdf"><u>
+    <span >HERE</span>
+</u></a></strong><span > to download the <strong>UMG User Guide</strong>.</span><br />
+&nbsp;
+<hr /><br />
+<span ><strong><span style="font-size: 16px;"><span style="color: #F8E03F">
+UMG CORPORATE GUIDELINES
+</span></span></strong></span><br />
+<br />
+<span >
+Click </span><strong><a href="http://img.proformaecom.com/images/UMG/UMG-Corp-Guide-110513_lowres.pdf"><u><span>
+HERE</span></u></a></strong><span> to download the <strong>UMG Guidelines</strong>.</span><br />
+&nbsp;
+<hr />&nbsp;
+<p class="MsoNormal"><span ><strong><span style="font-size: 16px; color: #F8E03F">
+CONTACTS </span></strong></span></span><br />
+    <br />
+    <span >Caleb Ramsay&nbsp;</span><br />
+    <span >6301 Owensmouth Avenue</span><br />
+    <span >Woodland Hills, CA 91367</span><br />
+    <span >818-286-5221</span><br />
+    <span ><a href="mailto:caleb.ramsay@umusic.com">caleb.ramsay@umusic.com</a></span></p>
+
+<p class="MsoNormal"><span >&nbsp;</span></p>
+
+<p class="MsoNormal"><span >Pamela Alba</span><br />
+    <span>6301 Owensmouth Avenue</span><br />
+    <span >Woodland Hills, CA 91367</span><br />
+    <span>818-286-8935</span><br />
+    <span ><a href="mailto:pamela.alba@umusic.com">pamela.alba@umusic.com</a></span></p>
+
+<p class="MsoNormal"><span>&nbsp;</span></p>
+
+<p class="MsoNormal"><span >Lon Murphy</span><br />
+    <span >2220 Colorado Avenue</span><br />
+    <span >Santa Monica, CA 90404</span><br />
+    <span >310-865-8911</span><br />
+    <span><a href="mailto:lon.murphy@umusic.com">lon.murphy@umusic.com</a></span></p>
+
+<p class="MsoNormal"><span >&nbsp;</span></p>
+
+<p class="MsoNormal"><span >Ileana Seropian</span><br />
+    <span ">2220 Colorado Avenue</span><br />
+    <span ">Santa Monica, CA 90404</span><br />
+    <span >310-865-5530</span><br />
+    <span "><a href="mailto:Ileana.seropian@umusic.com">Ileana.seropian@umusic.com</a></span></p>
+</div>
