--- a/app/partials/branding.html
+++ b/app/partials/branding.html
@@ -1,11 +1,12 @@
-<section class="jumbotron" ng-class="{'active': isActive('catalog')}" ng-show="user.Company.LogoUrl">
-    <div class="container">
-        <h2 class="thumbnail" ng-show="Four51User.isAuthenticated()">
+<section   class="jumbotron text-center img-responsive " ng-class="{'active': isActive('catalog')}" ng-show="user.Company.LogoUrl">
+    <div class="container " >
+        <h2  class="img-responsive" ng-show="Four51User.isAuthenticated()">
             <a ng-click="refreshUser()" href="catalog">
-                <img ng-src="{{user.Company.LogoUrl}}" />
+
+
+                <img     ng-src="{{user.Company.LogoUrl}}" />
+
             </a>
-            <span>{{user.Company.Name}}</span>
-            <homemessage />
         </h2>
     </div>
 </section>
