--- a/app/css/editor.css
+++ b/app/css/editor.css
@@ -1,1 +1,84 @@
-/*do not make changes to this file. It will be overwritten by the css editor. Put theme changes in custom.css*/
+.dropdown-mega {display: none; }
+.breadcrumb {background: transparent; border: #fff; }
+.container .navbar-nav li.active a:hover  {background-color: rgba(36, 57, 211, 0.5);}
+.container .navbar-nav li.active a:focus  {background-color: rgba(36, 57, 211, 0.5);}
+.navbar-default .navbar-nav .open > a  {background-color: rgba(36, 57, 211, 0.5);}
+.navbar-default .navbar-nav .open > a:hover  {background-color: rgba(36, 57, 211, 0.5);}
+.navbar-default .navbar-nav .open > a:focus  {background-color: rgba(36, 57, 211, 0.5);}
+.navbar-nav li.dropdown li > a:hover  {background-color: rgba(36, 57, 211, 0.5);}
+.navbar-nav li.dropdown li > a:focus  {background-color: rgba(36, 57, 211, 0.5);}
+.navbar .container .navbar-nav li.active .fa-caret-down  {color: rgba(36, 57, 211, 0.5);}
+.navbar-nav li.dropdown li > a  { background-color:#fff; color:#333541;}
+.navbar-nav li.dropdown li > a:hover  {color: #FFFFFF;}
+.navbar .container .navbar-nav.pull-right li a i:first-of-type  {border-color: #FFFFFF;}
+.badge  {background-color: rgba(36, 57, 211, 0.5);;}
+.badge  {color: #FFFFFF;}
+.navbar-default  {background-color: rgba(7, 12, 41, 0.5);}
+.container .navbar-nav li a  {color: #FFFFFF;}
+.container .navbar-nav li.active > a  {background-color: rgba(36, 57, 211, 0.5);}
+.container .navbar-nav li.active > a  {color: #FFFFFF;}
+.navbar-default, .dropdown-mega  {border-color: #FFFFFF;}
+body  {background-image: url('http://www.four51.com/Themes/Custom/d0cd27e4-8096-40b6-aacc-4649fbe330a1/UMG/newUMGbackground.jpg'); background-color: #000; background-attachment: fixed;}
+body  {color: #fff;}
+body a {color: #85A8EE; font-weight: bold;}
+body a:hover {color: #3552D8;}
+body a:focus{color: #dee3f9;}
+.text-primary  {color: #FFF;}
+.text-info  {color: #85A8EE; font-weight: bold;}
+.btn-primary  {background-color: #2439D3;}
+.btn-primary, .btn-primary:hover  {color: #FFF;}
+.btn-primary  {border-color: #081B24;}
+.btn-primary:hover  {background-color: #14207A ;}
+.btn-default  {background-color: #FFFFFF;}
+.btn-default, .btn-default:hover  {color: #333333;}
+.btn-default  {border-color: #CCCCCC;}
+.btn-default:hover  {background-color: #EBEBEB;}
+.btn-info  {background-color: #1020D0;}
+.btn-info, .btn-info:hover  {color: #FFFFFF;}
+.btn-info  {border-color: #0b1589;}
+.btn-info:hover  {background-color: #0b1589; border-color: #0b1589;}
+.btn-success  {background-color: #317231;}
+.btn-success, .btn-success:hover  {color: #FFFFFF;}
+.btn-success  {border-color: #317231;}
+.btn-success:hover {border-color: #275B27;}
+.btn-success:hover  {background-color: #275B27;}
+.btn-warning  {background-color: #f0ad4e;}
+.btn-warning, .btn-warning:hover  {color: #FFFFFF;}
+.btn-warning  {border-color: #EEA236;}
+.btn-warning:hover  {border-color: #ED9C28;}
+.btn-warning:hover  {background-color: #ED9C28;}
+.btn-danger  {background-color: #93231F;}
+.btn-danger, .btn-danger:hover  {color: #FFFFFF;}
+.btn-danger  {border-color: #93231F;}
+.btn-danger:hover  {border-color: #751C18;}
+.btn-danger:hover  {background-color: #751C18;}
+.jumbotron  {background-color:transparent;}
+h2 .jumbotron  {color: #333333;}
+.panel {background-color: transparent;}
+.panel-primary .panel-heading .panel-title  {background-color: #070C29; border: none;}
+.panel-primary .panel-heading .panel-title  {color: #FFFFFF; border: none;}
+.panel-default .panel-heading .panel-title  {background-color: #070C29; border: none;}
+.panel-default .panel-heading .panel-title  {color: #FFF;}
+.panel-default {background-color: transparent; border: none; }
+.panel-default .well {background-color: transparent; border: none; }
+.panel-primary {background-color: transparent; border: none;}
+.panel-nav ul li li a {
+    color: #fff;
+    font-weight: inherit;
+}
+.panel-footer  {background-color: transparent;}
+.panel-category-list .well h5  {color: #333333;}
+.panel-category-list .well  {border-color: #F0F0F0;}
+.panel-product-list .well  {background-color: transparent; border: none;}
+.panel-product-list .well  {color: #333333;}
+.panel-product-list .well  {border-color: #F0F0F0;}
+.panel-lineitem {color:#333333;}
+
+.quantity-total {color: #0C2A39;}
+.fa-arrow-left{color:#ffffff !important;}
+.pagination > .active > a, .pagination > .active > span, .pagination > .active > a:hover, .pagination > .active > span:hover, .pagination > .active > a:focus, .pagination > .active > span:focus {
+    background-color: #85A8EE !important;
+    border-color: #85A8EE;
+    color: #fff;
+    z-index: 2;
+}
