--- a/app/partials/categoryView.html
+++ b/app/partials/categoryView.html
@@ -3,36 +3,37 @@
         <ul>
             <li class="hidden-sm hidden-xs">
                 <span ng-click="toggleNav()"><i class="fa fa-bars" ng-class="{ 'text-info': navStatus.visible }"></i></span>
+
             </li>
             <li>
-                <span id="451_lbl_curcat" class="text-primary" ng-bind-html="currentCategory.Name || '  {{'Categories' | r | xlat}}'"></span>
+                <span id="451_lbl_curcat" class="text-primary" ng-bind-html="currentCategory.Name || '  {{'Categories' | r}}'"></span>
             </li>
-            <li class="pull-right">
+            <li class="pull-right" style="margin-right: 15%;" >
                 <a href="search">
-                    <span><i class="fa fa-search text-primary"></i></span>
+                    <span><i class="fa fa-search text-primary"></i>Search</span>
                 </a>
             </li>
         </ul>
     </nav>
-    <aside class="col-sm-3 col-collapse visible-md visible-lg" ng-if="navStatus.visible">
-        <div class="panel panel-default panel-nav">
-            <div class="panel-heading">
+    <aside class="col-sm-2 col-collapse visible-md visible-lg" ng-if="navStatus.visible">
+
+        <div class="panel panel-default panel-nav ">
+            <!--div class="panel-heading">
                 <h3 class="panel-title">
-                    {{'Category List' | r | xlat}}
+                    {{'Category List' | r}}
                 </h3>
-            </div>
-            <nav class="nav 451qa_sidenav panel-body">
-                <ul>
+            </div-->
+            <nav class="nav 451qa_sidenav panel-body ">
+                <ul col-lg-9>
                     <categorytree tree='tree' current='currentCategory' />
                 </ul>
             </nav>
         </div>
     </aside>
     <div class="col-collapse" ng-class="{ 'col-md-8 col-md-offset-1': navStatus.visible }" >
-
         <categorylistview></categorylistview>
 
-		<loadingindicator ng-show="productLoadingIndicator" title="{{'Please wait while we fetch all products' | r | xlat}}"/>
+        <loadingindicator ng-show="productLoadingIndicator" title="{{'Please wait while we fetch all products' | r}}"/>
 
         <productlistview></productlistview>
 
