--- a/app/partials/checkOutView.html
+++ b/app/partials/checkOutView.html
@@ -1,66 +1,65 @@
 <section>
-    <loadingindicator ng-show="displayLoadingIndicator" title="{{'Please wait while we update your order' | r | xlat}}" />
+    <loadingindicator ng-show="displayLoadingIndicator" title="Please wait while we update your order" />
     <div class="col-md-4 col-md-offset-1 col-md-push-7 col-collapse">
         <ordersummary />
     </div>
 
     <div class="col-md-7 col-md-pull-5 col-collapse" ng-show="currentOrder && currentOrder.isEditable" ng-click="showSuccessAlert = false">
         <orderdetails ng-show="hasOrderConfig" />
-        <ordershipping />
-        <orderbilling />
+        <ordershipping ng-show="hasOrderConfig"  />
+        <orderbilling ng-hide="true"  />
         <orderapprovals ng-show="currentOrder.Approvals" />
         <div class="navbar-fixed-bottom">
             <div class="view-response-message alert-success text-center" alert-show="actionMessage">
-                <p>{{actionMessage | r | xlat}}</p>
+                <p>{{actionMessage | r}}</p>
             </div>
             <div class="view-response-message alert-danger text-center" alert-show="errorMessage">
-                <p>{{errorMessage | r | xlat}}</p>
+                <p>{{errorMessage | r}}</p>
             </div>
             <div class="view-response-message alert-danger text-center" alert-show="couponError">
-                <p>{{couponError | r | xlat}}</p>
+                <p>{{couponError | r}}</p>
             </div>
-            <div class="view-error-message" ng-show="(cart_order.$error.required.length + cart_billing.$error.required.length + cart_shipping.$error.required.length + cart_billing.$error.paymentMethod.length) > 0">
+            <div class="view-error-message" ng-show="(cart_order.$error.required.length + cart_billing.$error.required.length + cart_shipping.$error.required.length) > 0">
                 <ul class="alert-warning">
                     <li class="text-center">
                         <span class="badge">
                             <i class="fa fa-exclamation-circle fa-inverse"></i>
-                            {{cart_order.$error.required.length + cart_billing.$error.required.length + cart_shipping.$error.required.length + cart_billing.$error.paymentMethod.length}}
+                            {{cart_order.$error.required.length + cart_billing.$error.required.length + cart_shipping.$error.required.length}}
                         </span>
                     </li>
                     <li class="text-center">
                         <ul ng-class="{'one': errorSection == 'open', 'two': errorSection == '' }">
-                            <li ng-if="cart_order.orderid.$invalid">{{'Enter an ' + ('order' | r) + ' ' + ('ID' | r) | xlat}}</li>
-                            <li ng-if="cart_shipping.shippingAddress.$invalid">{{'Please choose a ' + ('Shipping' | rl) + ' ' + ('Address' | rl) | xlat}}</li>
-                            <li ng-if="cart_shipping.shippingAddressLineItem.$invalid">{{'Please choose a ' + ('Shipping' | rl) + ' ' + ('Address' | rl) | xlat}}</li>
-                            <li ng-if="cart_shipping.shipMethod.$invalid">{{'Please choose a ' + ('Shipping' | rl) + ' ' + ('Method' | rl) | xlat}}</li>
-                            <li ng-if="cart_billing.billingAddress.$invalid">{{'Please choose a ' + ('Billing' | rl) + ' ' + ('Address' | rl) | xlat}}</li>
-                            <li ng-if="cart_billing.$error.paymentMethod">{{'Please choose a valid ' + ('Payment' | rl) + ' ' + ('Method' | rl) | xlat}}</li>
-                            <li ng-if="!user.Permissions.contains('CreateBillToAddress') && billaddresses.length == 0">
-                                {{'You have not been granted permission to create a ' + ('Billing' | r) + ' ' + ('Address' | r) + ', and no ' + ('Billing' | r) + ' ' + ('Addresses' | r) + ' have been assigned to you. Therefore, you are not allowed to place this ' + ('Order' | r) + ' at this time' | xlat}}
+                            <li ng-if="cart_order.orderid.$invalid">Enter an order id</li>
+                            <li ng-if="cart_shipping.shippingAddress.$invalid">Please choose a {{'Shipping' | rl}} {{'Address' | rl}}</li>
+                            <li ng-if="cart_shipping.shipMethod.$invalid">Please choose a {{'Shipping Method' | rl}}</li>
+                            <li ng-if="cart_billing.billingAddress.$invalid">Please choose a {{'Billing' | rl}} {{'Address' | rl}}</li>
+                            <li ng-if="cart_billing.$error.paymentMethod">Please choose a valid {{'Payment' | rl}} {{'Method' | rl}}</li>
+                            <li ng-if="!user.Permissions.contains('CreateBillToAddress') && (addresses | filter:{IsBilling:true}).length == 0">
+                                You have not been granted permission to create a Billing address, and no Billing addresses have been assigned to you. Therefore, you are not allowed to place this order at this time
                             </li>
-                            <li ng-if="!user.Permissions.contains('CreateShipToAddress') && shipaddresses.length == 0">
-                                {{'You have not been granted permission to create a ' + ('Shipping' | r) + ' ' + ('Address' | r) + ', and no ' + ('Shipping' | r) + ' ' + ('Addresses' | r) + ' have been assigned to you. Therefore, you are not allowed to place this ' + ('Order' | r) + ' at this time' | xlat}}
+                            <li ng-if="!user.Permissions.contains('CreateShipToAddress') && (addresses | filter:{IsShipping:true}).length == 0">
+                                You have not been granted permission to create a Shipping address, and no Shipping addresses have been assigned to you. Therefore, you are not allowed to place this order at this time
+                            </li>
                         </ul>
                     </li>
-                    <li class="text-center">
-                        <a href ng-show="(cart_order.$error.required.length + cart_billing.$error.required.length + cart_shipping.$error.required.length + cart_billing.$error.paymentMethod.length) > 1">
+                    <li class="text-center" >
+                        <a href ng-show="(cart_order.$error.required.length + cart_billing.$error.required.length + cart_shipping.$error.required.length) > 1">
                             <i class="fa fa-caret-down" ng-click="errorSection = 'open'" ng-hide="errorSection == 'open'"></i>
                             <i class="fa fa-caret-up" ng-click="errorSection = ''" ng-show="errorSection == 'open'"></i>
                         </a>
                     </li>
                 </ul>
             </div>
-            <ul>
+            <ul style="background-color: #06090E ;">
                 <li>
-                    <button class="btn btn-danger" ng-click="currentOrder.Status == 'AwaitingApproval' ? cancelEdit() : cancelOrder()">
-                        <small ng-show="currentOrder.Status != 'AwaitingApproval'">{{('Cancel' | r) + ' ' + ('Order' | r) | xlat}}</small>
-                        <small ng-show="currentOrder.Status == 'AwaitingApproval'">{{('Cancel' | r) + ' ' + ('Edit' | r) | xlat}}</small>
+                    <button class="btn btn-danger" ng-click="cancelOrder()">
+                        {{'Cancel' | r}} {{'Order' | r}}
                     </button>
                 </li>
                 <li>
                     <button class="btn btn-primary"  ng-click="saveChanges()">
                         <loadingindicator ng-show="displayLoadingIndicator" />
-                        {{('Save' | r) + ' ' + ('Order' | r) | xlat}}
+                        {{'Save' | r}} {{'Order' | r}}
                     </button>
                 </li>
                 <li>
@@ -68,7 +67,7 @@
                             ng-class="{'btn-warning': cart_shipping.$invalid || cart_order.$invalid || cart_billing.$invalid, 'btn-success': !cart_shipping.$invalid && !cart_order.$invalid && !cart_billing.$invalid }"
                             ng-click="submitOrder()" ng-disabled="cart_shipping.$invalid || cart_order.$invalid || cart_billing.$invalid">
                         <i ng-show="cart_shipping.$invalid || cart_order.$invalid || cart_billing.$invalid" class="fa fa-warning"></i>
-                        <span>{{('Submit' | r) + ' ' + ('Order' | r) | xlat}}</span>
+                        <span>{{'Submit' | r}} {{'Order' | r}}</span>
                     </button>
                 </li>
             </ul>
