--- a/app/partials/controls/orderDetails.html
+++ b/app/partials/controls/orderDetails.html
@@ -1,25 +1,14 @@
 <div class="panel panel-default panel-order">
-    <div class="panel-heading" ng-class="{'no': cart_order.$invalid, 'yes': !cart_order.$invalid, 'open': checkOutSection == 'order' }">
+    <div ng-init="toggleOrder = false" ng-click="toggleOrder = !toggleOrder" class="panel-heading" ng-class="{'no': cart_order.$invalid, 'yes': !cart_order.$invalid, 'open': checkOutSection == 'order' }" ng-click="showSuccessAlert = false">
         <h3 ng-click="checkOutSection = 'order'" class="panel-title panel-primary">
             <i class="pull-left" ng-class="{'fa fa-warning': cart_order.$invalid, 'fa fa-check-circle': !cart_order.$invalid }"></i>
             {{'Order' | r | xlat}}
-            <i class="pull-right" ng-class="{'fa fa-caret-up': checkOutSection == 'order', 'fa fa-caret-down': checkOutSection == 'shipping' || checkOutSection == 'billing' }"></i>
+            <i class="pull-right" ng-class="{'fa fa-caret-up': toggleOrder, 'fa fa-caret-down': !toggleOrder}"></i>
         </h3>
     </div>
-    <div collapse="checkOutSection != 'order'" class="panel-body">
+    <div class="panel-body" collapse="toggleOrder">
         <form name="cart_order" novalidate="">
-            <div class="view-form-icon" ng-if="user.Permissions.contains('EditPOID')" ng-invalid>
-                <div class="input-group">
-                    <label class="required">{{('Order' | r) + ' '  + ('ID' | r) | xlat}}</label>
-                    <input class="form-control" name="orderid" ng-disabled='currentOrder.autoID' type='text' ng-model="currentOrder.ExternalID"
-                           required ui-mask="{{currentOrder.autoID ? null : user.Company.POIDMask}}"></input>
-                        <span ng-if="user.Permissions.contains('AllowAutoGenPOID')" class="input-group-addon">
-                            <input type='checkbox' ng-click="currentOrder.ExternalID = currentOrder.autoID ? null : 'auto'" ng-model='currentOrder.autoID' />
-                        </span>
-                    <span class="input-group-addon" ng-show="user.Permissions.contains('AllowAutoGenPOID')">{{('Auto' | r) + ' ' + ('ID' | r) | xlat}}</span>
-                    <i class="fa">#</i>
-                </div>
-            </div>
+
             <div class="view-form-icon" ng-if="user.Permissions.contains('Comments')">
                 <div>
                     <label ng-show="currentOrder.Comments">{{'Comments' | r | xlat}}:</label>
@@ -27,6 +16,7 @@
                     <i class="fa fa-edit"></i>
                 </div>
             </div>
+
             <div class="view-form-icon" ng-if="user.Permissions.contains('CostCenterPerOrder') && !user.Permissions.contains('CostCenterPerLine')">
                 <div ng-class="{'view-form-select': !currentOrder.CostCenter, '': currentOrder.CostCenter }">
                     <label class="required">{{'Cost Center' | r | xlat}}</label>
@@ -36,11 +26,11 @@
                     <i class="fa fa-arrow-down" ng-if="user.CostCenters.length > 1 && !user.Permissions.contains('FreeFormCostCenter')"></i>
                 </div>
             </div>
-            <div ng-show="currentOrder.OrderFields">
+            <div ng-show="currentOrder.OrderFields" class="smallOrderField" >
                 <hr />
-                <div ng-repeat="field in currentOrder.OrderFields">
+                <div ng-repeat="field in currentOrder.OrderFields | HideOrderField " >
                     <customtextfield customfield="field" ng-if="field.ControlType == 'Text'" ng-required="field.IsRequired" />
-                    <customselectionfield customfield="field" ng-if="field.ControlType == 'Selection'" ng-required="field.IsRequired" />
+                    <customselectionfield customfield="field" ng-if="field.ControlType == 'Selection'" ng-required="field.IsRequired"  />
                 </div>
             </div>
         </form>
