--- a/app/partials/orderSearchView.html
+++ b/app/partials/orderSearchView.html
@@ -1,5 +1,5 @@
-<section class="order-search-view">
-    <div class="panel panel-default" ng-if="!hasStandardTypes && !hasReplenishmentTypes && !hasPriceRequestTypes">
+<section class="order-search-view col-lg-8 col-lg-offset-2 col-sm-12">
+    <div class="panel panel-default " ng-if="!hasStandardTypes && !hasReplenishmentTypes && !hasPriceRequestTypes">
         <div class="panel-heading">
             <h3 class="panel-title">{{'Orders' | r | xlat}}</h3>
         </div>
@@ -118,15 +118,10 @@
             <button type="submit" class="btn btn-primary pull-right" ng-click="OrderSearch($event, criteria)">{{'Search' | r | xlat}}</button>
         </div>
     </div>
-    <div class="panel panel-default" ng-show="showNoResults">
-        <div class="panel-heading">
-            <h3 class="panel-title">
-                <span class="alert alert-info">
-                    {{'Your search resulted in no records. Please refine your search.' | r | xlat}}
-                </span>
-            </h3>
-        </div>
+    <div class="alert alert-info" ng-show="showNoResults">
+        {{'Your search resulted in no records. Please refine your search.' | r | xlat}}
     </div>
+
     <div class="panel panel-default" ng-show="orders">
         <div class="panel-heading">
             <h3 class="panel-title">
@@ -163,7 +158,7 @@
                     {{order.Type}}
                 </div>
                 <div class="col-sm-2">
-                     <span class="visible-xs panel-table-heading-xs text-info">{{'Status' | r | xlat}}</span>
+                    <span class="visible-xs panel-table-heading-xs text-info">{{'Status' | r | xlat}}</span>
                     {{order.StatusText}}
                 </div>
                 <div class="col-sm-2">
