--- a/app/partials/controls/awaitingApproval.html
+++ b/app/partials/controls/awaitingApproval.html
@@ -1,57 +1,53 @@
-<section class="order-search-view col-lg-8 col-lg-offset-2 col-sm-12">
-    <div class="alert alert-warning col-lg-4 col-lg-offset-4 text-center" ng-repeat="criteria in OrderSearchCriteria | filter:{Type:'Standard'} | awaitingApprovalFilter" ng-show="!criteria.Count">
-        You have no orders available to approve
+<div class="alert alert-warning col-lg-4 col-lg-offset-4 text-center" ng-repeat="criteria in OrderSearchCriteria | filter:{Type:'Standard'} | awaitingApprovalFilter" ng-show="!criteria.Count">
+    You have no orders available to approve
+</div>
+<div ng-show="isApprover" class="panel panel-table">
+    <loadingindicator ng-show="pagedIndicator" />
+    <div ng-show="settings.listCount > settings.pageSize">
+        <pagination page="settings.currentPage" max-size="8" rotate="false" boundary-links="true" total-items="settings.listCount"
+                    items-per-page="settings.pageSize" direction-links="true"></pagination>
     </div>
-    <div class="panel panel-default" ng-show="isApprover">
-        <div class="panel-table">
-            <loadingindicator ng-show="pagedIndicator" />
-            <div ng-show="settings.listCount > settings.pageSize">
-                <pagination page="settings.currentPage" max-size="8" rotate="false" boundary-links="true" total-items="settings.listCount"
-                            items-per-page="settings.pageSize" direction-links="true"></pagination>
-            </div>
-            <div class="row hidden-xs text-info">
-                <div class="col-xs-12 col-sm-2">{{'ID' | r | xlat}}</div>
-                <div class="col-xs-12 col-sm-2">{{'Type' | r | xlat}}</div>
-                <div class="col-xs-12 col-sm-2">{{'Status' | r | xlat}}</div>
-                <div class="col-xs-12 col-sm-2">{{'Submitted' | r | xlat}}</div>
-                <div class="col-xs-12 col-sm-2">{{('Submitted' | r) + ' ' + ('Date' | r) | xlat}}</div>
-                <div class="col-xs-12 col-sm-2">{{'Approver' | r}}</div>
-                <div class="col-xs-12 col-sm-2" ng-if="!(user.Permissions.contains('HidePricing'))">{{'Total' | r | xlat}}</div>
-            </div>
-            <div class="row" ng-repeat="order in orders | paginate:(settings.currentPage-1) * settings.pageSize | limitTo:settings.pageSize">
-                <div class="col-sm-2">
-                    <span class="visible-xs panel-table-heading-xs text-info">{{'ID' | r | xlat}}</span>
-                    <a ng-href="{{currentOrder.ID == order.ID ? 'cart' : 'order/' + order.ID}}">{{order.ExternalID || ('(unspecified)' | xlat)}}</a>
-                </div>
-                <div class="col-sm-2">
-                    <span class="visible-xs panel-table-heading-xs text-info">{{'Type' | r | xlat}}</span>
-                    {{order.Type}}
-                </div>
-                <div class="col-sm-2">
-                    <span class="visible-xs panel-table-heading-xs text-info">{{'Status' | r | xlat}}</span>
-                    {{order.StatusText}}
-                </div>
-                <div class="col-sm-2">
-                    <span class="visible-xs panel-table-heading-xs text-info">{{'Submitted' | r | xlat}}</span>
-                    {{order.FromUserFirstName + ' ' + order.FromUserLastName}}
-                </div>
-                <div class="col-sm-2">
-                    <span class="visible-xs panel-table-heading-xs text-info">{{('Submitted' | r) + ' ' + ('Date' | r) | xlat}}</span>
-                    {{order.DateSubmitted || order.DateCreated | date:user.Culture.DateFormat.long}}
-                </div>
-                <div class="col-sm-2">
-                    <span class="visible-xs panel-table-heading-xs text-info">{{'Approver' | r}}</span>
-                    <p ng-repeat="rule in order.Approvals">{{rule.ApprovingPartyName}}</p>
-                </div>
-                <div class="col-sm-2" ng-if="!(user.Permissions.contains('HidePricing'))">
-                    <span class="visible-xs heading-xs text-info">{{'Total' | r}}</span>
-                    {{order.Total | culturecurrency}}
-                </div>
-            </div>
-            <div ng-show="settings.listCount > settings.pageSize">
-                <pagination page="settings.currentPage" max-size="8" rotate="false" boundary-links="true" total-items="settings.listCount"
-                            items-per-page="settings.pageSize" direction-links="true"></pagination>
-            </div>
+    <div class="row hidden-xs text-info">
+        <div class="col-xs-12 col-sm-2">{{'ID' | r}}</div>
+        <div class="col-xs-12 col-sm-2">{{'Type' | r}}</div>
+        <div class="col-xs-12 col-sm-2">{{'Status' | r}}</div>
+        <div class="col-xs-12 col-sm-2">{{'Submitted' | r}}</div>
+        <div class="col-xs-12 col-sm-2">{{'Submitted' | r}} {{'Date' | r}}</div>
+        <div class="col-xs-12 col-sm-2">{{'Approver' | r}}</div>
+        <div class="col-xs-12 col-sm-2" ng-if="!(user.Permissions.contains('HidePricing'))">{{'Total' | r}}</div>
+    </div>
+    <div class="row" ng-repeat="order in orders | paginate:(settings.currentPage-1) * settings.pageSize | limitTo:settings.pageSize">
+        <div class="col-sm-2">
+            <span class="visible-xs panel-table-heading-xs text-info">{{'ID' | r}}</span>
+            <a ng-href="order/{{order.ID}}">{{order.ExternalID}}</a>
+        </div>
+        <div class="col-sm-2">
+            <span class="visible-xs panel-table-heading-xs text-info">{{'Type' | r}}</span>
+            {{order.Type}}
+        </div>
+        <div class="col-sm-2">
+            <span class="visible-xs panel-table-heading-xs text-info">{{'Status' | r}}</span>
+            {{order.StatusText}}
+        </div>
+        <div class="col-sm-2">
+            <span class="visible-xs panel-table-heading-xs text-info">{{'Submitted' | r}}</span>
+            {{order.FromUserFirstName + ' ' + order.FromUserLastName}}
+        </div>
+        <div class="col-sm-2">
+            <span class="visible-xs panel-table-heading-xs text-info">{{'Submitted' | r}} {{'Date' | r}}</span>
+            {{order.DateSubmitted || order.DateCreated | date:'short'}}
+        </div>
+        <div class="col-sm-2">
+            <span class="visible-xs panel-table-heading-xs text-info">{{'Approver' | r}}</span>
+            <p ng-repeat="rule in order.Approvals">{{rule.ApprovingPartyName}}</p>
+        </div>
+        <div class="col-sm-2" ng-if="!(user.Permissions.contains('HidePricing'))">
+            <span class="visible-xs heading-xs text-info">{{'Total' | r}}</span>
+            {{order.Total | currency:"$"}}
         </div>
     </div>
-</section>
+    <div ng-show="settings.listCount > settings.pageSize">
+        <pagination page="settings.currentPage" max-size="8" rotate="false" boundary-links="true" total-items="settings.listCount"
+                    items-per-page="settings.pageSize" direction-links="true"></pagination>
+    </div>
+</div>
