verbiage change in login.html

--- a/app/partials/controls/login.html
+++ b/app/partials/controls/login.html
@@ -34,7 +34,7 @@
                         <div>
                             <div class="col-lg-12">
                                 <p class="alert alert-info col-lg-12 " ng-show="showEmailHelp && (!EmailNotFoundException || !PasswordSecurityException)">
-                                    If you would like a {{'Username' | r}} and {{'Password' | r}}, please provide your email address and your log on information will be emailed to you.
+                                    If you have forgotten your {{'Username' | r}} and/or {{'Password' | r}}, please provide your email address and your user id and a link to change your password will be emailed to you
                                 </p>
                             </div>
 
