--- a/app/partials/controls/login.html
+++ b/app/partials/controls/login.html
@@ -71,6 +71,21 @@
                                 </div>
                             </div>
                         </div>
+                        <div>
+                            <div class="view-form-icon" ng-show="PasswordReset">
+                                <div>
+                                    <label ng-show="credentials.NewPassword">New {{'Password' | r}}</label>
+                                    <input class="form-control" ng-required="PasswordReset" name="new_password" type="password" ng-model="credentials.NewPassword" placeholder="New {{'Password' | r}}" />
+                                    <i class="fa fa-lock"></i>
+                                </div>
+                                <div>
+                                    <label ng-show="credentials.ConfirmPassword">Confirm {{'Password' | r}}</label>
+                                    <input class="form-control" ng-required="PasswordReset" name="confirm_password" type="password" ng-model="credentials.ConfirmPassword"  placeholder="Confirm {{'Password' | r}}" ng-match="credentials.NewPassword" />
+                                    <i class="fa fa-lock"></i>
+                                    <inlineerror ng-show="login_form.confirm_password.$error.match" title="{{'Password' | r}} do not match!" />
+                                </div>
+                            </div>
+                        </div>
                         <input ng-disabled="login_form.$invalid" class="btn btn-large btn-primary btn-block" id="451_btn_login" type="submit" value="{{buttonText}}" /></br>
                         <btn class="btn btn-info col-lg-12 text-center" ng-show="showEmailHelp" ng-click="showEmailHelp = !showEmailHelp; buttonText = 'Logon'">
                             Return to logon
